--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -29,7 +29,7 @@
         </div>    
      
         <mat-card-content>
-            <h3>Report from Goodness</h3>
+            <h3>Report from Goodness(Update only HEAVEN_ADVOCATE)</h3>
                 <table class="example-table mat-elevation-z8" mat-table matSort #TableOneSort="matSort" recycleRows [dataSource]="dataSourceOfgoodness">
                     <!-- Position Column -->
                     <ng-container matColumnDef="id">
@@ -53,7 +53,7 @@
 
             <mat-divider></mat-divider>
 
-            <h3>Report from Sins</h3>
+            <h3>Report from Sins(Update only HEAVEN_PROSECUTOR)</h3>
             <table class="example-table mat-elevation-z8" mat-table matSort #TableTwoSort="matSort" recycleRows [dataSource]="dataSourceofsins">
                 <!-- Position Column -->
                 <ng-container matColumnDef="id">
