--- a/afterlife-front-end/src/app/modules/quality/compoment/quality/quality.component.html
+++ b/afterlife-front-end/src/app/modules/quality/compoment/quality/quality.component.html
@@ -1,4 +1,3 @@
-<highcharts-chart
-   [Highcharts] = "highcharts" 
-   [options] = "chartOptions">
-</highcharts-chart>
+<div width="400" height="400">
+   <canvas id="quality">{{chart}}</canvas>
+</div>
