--- a/afterlife-front-end/src/app/modules/survey/survey.component.html
+++ b/afterlife-front-end/src/app/modules/survey/survey.component.html
@@ -21,11 +21,11 @@
                         <i class="fa fa-plus"></i>New Survey
                         </button>
                     </div>
-                    <div class="btn-group">
+<!--                     <div class="btn-group">
                         <button type="button" class="btn btn-info">
                           <i class="fas fa-sync fa-spin"></i><i class="fas fa-sync"></i>
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
