Fixed UI for button - "Mark"

--- a/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
+++ b/afterlife-front-end/src/app/modules/classificator/components/dialog-report/dialog-report.component.html
@@ -11,7 +11,7 @@
     </mat-card-header>
         <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
         <div>
-            <button [hidden]="!isGodOrDevil" type="button" (click)="postMark()">Mark Argue</button>
+            <button [hidden]="!isGodOrDevil" mat-stroked-button color="primary" (click)="postMark()">Mark Argue</button>
             <mat-card-subtitle *ngIf="resultMark">{{resultMark.decisionText}}</mat-card-subtitle>
             <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByGod}}</mat-card-subtitle>
             <mat-card-subtitle *ngIf="resultMark">{{resultMark.isArguedByDevil}}</mat-card-subtitle>
